:bug: fix(api): modify user item query response (#246)